회원가입/로그인/리프레시 토큰 완료 - 황주은

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,6 +27,12 @@ springdoc:
   swagger-ui:
     path: /swagger.html
 
+#components:
+#  securitySchemes:
+#    bearerAuth:            # arbitrary name for the security scheme
+#      type: http
+#      scheme: bearer
+#      bearerFormat: JWT
 #file:
 #  dir: home/download/
 
