임시 비밀번호 네이버 이메일로 쏴주기 - 황주은

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <version>0.11.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.5</version>
+        </dependency>
 
     </dependencies>
 
