--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -47,3 +47,18 @@ KaKao:
 Naver:
   YOUR_CLIENT_ID: ncAR9prYDibH9NS7yQuA
   YOUR_CLIENT_SECRET: vl2B4Z4tvO
+
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+  datasource:
+    url: jdbc:mariadb://localhost:3306/campingsmore_test
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:init/schema.sql
+      data-locations: classpath:init/data.sql
