장바구니 테스트 작성중 - 신형주

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,6 +57,8 @@ spring:
       on-profile: test
   datasource:
     url: jdbc:mariadb://localhost:3306/campingsmore_test
+    username: root
+    password: green502
   sql:
     init:
       mode: always
