--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,6 +21,10 @@ spring:
     url: jdbc:mariadb://192.168.0.144:3306/team_e
     username: team_e
     password: green502
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 # swagger
 springdoc:
