TDD 세팅 중 - 황주은

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,3 +65,5 @@ spring:
       schema-locations: classpath:init/schema.sql
       data-locations: classpath:init/data.sql
       encoding: UTF-8
+  jpa:
+    defer-datasource-initialization: true
