--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -56,7 +56,7 @@ spring:
     activate:
       on-profile: test
   datasource:
-    url: jdbc:mariadb://localhost:3306/campingsmore_test
+    jdbc-url: jdbc:mariadb://localhost:3306/campingsmore_test
     username: root
     password: green502
   sql:
