시큐리티 권한 설정 수정 ㅎㄷㄷ 식은땀 존나 흘림;; - 황주은

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,10 @@ spring:
     redis:
       host: 192.168.0.144
       port: 6379
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 
 file:
   dir: /home/download/
